--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
             rel="stylesheet"
         />
         <title>LogLingua</title>
-        <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon-96x96.png" sizes="96x96" />
-        <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/favicon.svg" />
-        <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-        <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png" />
-        <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
+        <link rel="icon" type="image/png" href="./public/favicon-96x96.png" sizes="96x96" />
+        <link rel="icon" type="image/svg+xml" href="./public/favicon.svg" />
+        <link rel="shortcut icon" href="./public/favicon.ico" />
+        <link rel="apple-touch-icon" sizes="180x180" href="./public/apple-touch-icon.png" />
+        <link rel="manifest" href="./public/site.webmanifest" />
     </head>
     <body>
         <div id="root"></div>
